2015-01-21  Segher Boessenkool  <segher@kernel.crashing.org>

	PR rtl-optimization/64682
	* combine.c (distribute_notes): When moving a death note for
	a register that is set in the new I2, make sure to put it
	before that new I2.

2015-01-21  David Edelsohn  <dje.gcc@gmail.com>

	* config/rs6000/rs6000.c (rs6000_file_start): Use rs6000_isa_flags
	not TARGET_DEFAULT.

2015-01-21  Jakub Jelinek  <jakub@redhat.com>

	PR debug/64511
	* simplify-rtx.c (simplify_relational_operation_1): Don't try to
	optimize (eq/ne (and (side_effects) (const_int 0)) (const_int 0))
	into (eq/ne (and (not (side_effects)) (const_int 0)) (const_int 0)).

	PR sanitizer/64706
	* doc/invoke.texi (-fsanitize=vptr): Document.

	PR rtl-optimization/62078
	* dse.c: Include cfgcleanup.h.
	(rest_of_handle_dse): For -fnon-call-exceptions, if DSE removed
	anything call purge_all_dead_edges and cleanup_cfg at the end
	of the pass.

2015-01-21  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-utils.c (ipa_merge_profiles): Avoid ICE on mismatch in indirect
	edges.

2015-01-21  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* gimplify.c (gimplify_function_tree): Check the no_sanitize_thread
	decl attribute.

2015-01-21  David Sherwood  <david.sherwood@arm.com>
	    Tejas Belagod <Tejas.Belagod@arm.com>

	* config/aarch64/aarch64.h (CANNOT_CHANGE_MODE_CLASS): Removed.
	* config/aarch64/aarch64.c (aarch64_cannot_change_mode_class): Removed.
	* config/aarch64/aarch64-protos.h (aarch64_cannot_change_mode_class):
	Removed.

2015-01-21  David Sherwood  <david.sherwood@arm.com>
	    Tejas Belagod <Tejas.Belagod@arm.com>

	* config/aarch64/aarch64-protos.h (aarch64_simd_attr_length_rglist)
	(aarch64_reverse_mask): New decls.
	* config/aarch64/iterators.md (UNSPEC_REV_REGLIST): New enum.
	(insn_count): New mode_attr.
	* config/aarch64/aarch64-simd.md (vec_store_lanesoi, vec_store_lanesci)
	(vec_store_lanesxi, vec_load_lanesoi, vec_load_lanesci)
	(vec_load_lanesxi): Made ABI compliant for Big Endian targets.